<resources>
    <string name="app_name">Calculadora</string>
    <string name="textview">TextView</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="division">/</string>
    <string name="multi">*</string>
    <string name="log">Log<inf><small>10</small></inf></string>
    <string name="txt_result">0</string>
    <string name="btn7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_dot">.</string>
    <string name="btn_0">0</string>
    <string name="btn_3">3</string>
    <string name="btn_2">2</string>
    <string name="btn_1">1</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_9">9</string>
    <string name="btn_mod">%</string>
    <string name="btn_del">DEL</string>
    <string name="btn_equal">=</string>
    <string name="todo">TODO</string>
</resources>