<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#fff">

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00000000"
        android:elevation="1dp"
        android:gravity="right|center_vertical"
        android:text="@string/txt_result"
        android:textColor="#000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        app:drawableRightCompat="@color/cardview_shadow_end_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_resultado"
        android:id="@+id/linearLayout8"
        android:layout_marginTop="150dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout3"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:layout_weight="0.8"
                tools:ignore="NestedWeights">
                <!--android:layout_weight="1" -->

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:scrollbarFadeDuration="1500">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_suma"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/button2"
                            android:text="@string/suma"
                            android:textSize="12pt"
                            android:fontFamily="sans-serif"
                            android:textColor="#000"/>

                        <Button
                            android:id="@+id/btn_resta"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/button2"
                            android:text="@string/resta"
                            android:textSize="12pt"
                            android:fontFamily="sans-serif"
                            android:textColor="#000" />

                        <Button
                            android:id="@+id/btn_div"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/button2"
                            android:text="@string/division"
                            android:textSize="12pt"
                            android:fontFamily="sans-serif"
                            android:textColor="#000" />

                        <Button
                            android:id="@+id/btn_multi"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/button2"
                            android:text="@string/multi"
                            android:textSize="12pt"
                            android:fontFamily="sans-serif"
                            android:textColor="#000" />

                        <Button
                            android:id="@+id/btn_log"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/button2"
                            android:text="@string/log"
                            android:textSize="12pt"
                            android:fontFamily="sans-serif"
                            android:textColor="#000"/>
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                tools:layout_editor_absoluteX="0dp"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/button7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn7"
                    android:textColor="#000"
                    android:textSize="22sp"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/button8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_8"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_9"
                    android:textColor="#000"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/button4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_4"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_5"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_6"
                    android:textColor="#000"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_1"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_2"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_3"
                    android:textColor="#000"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/btn_dot"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_dot"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button0"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_0"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/btn_mod"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/btn_mod"
                    android:textColor="#000"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/backspace"
                android:background="@drawable/button1"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="22sp"
                android:contentDescription="@string/todo"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btn_del"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button1"
                android:text="@string/btn_del"
                android:textColor="#ff3b3b"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:text="@string/btn_equal"
                android:textColor="#000"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>